--- a/web/html_created_no_edit/print/construction_ca.html
+++ b/web/html_created_no_edit/print/construction_ca.html
@@ -25,42 +25,30 @@ Construcci&oacute;
 
 <h5>1.- Compra-Construcci&oacute; del cron&ograve;metre</h5>
 
-Chronopic 2.0 En preparaci&oacute;
+S'ha publicat (22 gener 2008) la versi&oacute; 3.0 de la placa Chronopic.
+<ul>
+<li>Per als que la voleu fabricar, disposeu de tota la informaci&oacute; en aquesta p&agrave;gina: <a href="http://www.iearobotics.com/wiki/index.php?title=Chronopic_3.0">Chronopic 3.0</a>
+<li>Aviat hi haur&agrave; unitats disponibles a la venda a un preu molt asequible.
+</ul>
+
+<table border="0" cellpadding="4" cellspacing="8">
+<tr valign="top">
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_small.jpg" width="250" height="188"></a>
+		<br>
+		Chronopic 3.0. Disseny Industrial.
+	</td>
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB_small.jpg" width="250" height="238"></a>
+		<br>
+		Chronopic 3.0 (PCB). Disseny industrial. 
+	</td>
+</tr>
+</table>
+
+Per a m&eacute;s informaci&oacute; podeu consultar les <a href="faq_ca.html">preguntes freq&uuml;ents</a>.
 <br><br>
-(30-9-2007 <a href="http://mail.gnome.org/archives/chronojump-list/2007-September/msg00007.html">"All Chronopic 2.0 info on the internet / Toda la Informaci&oacute;n de Chronopic 2.0 colgada en la red"</a>)
-
-<table width="100%" border="0" cellspacing="2" cellpadding="2">
-<tr bgcolor="#e6e6fa"><th>USB - frontal</th><th>USB - darrere</th></tr>
-<tr>
-<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_front.jpg"><img src="chronopic_2_0_usb_front_mini.jpg"></a></td>
-<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_usb_back.jpg"><img src="chronopic_2_0_usb_back_mini.jpg"></a></td>
-</tr>
-<tr bgcolor="#e6e6fa"><th>S&egrave;rie - frontal</th><th>S&egrave;rie - darrere</th></tr>
-<tr>
-<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_front.jpg"><img src="chronopic_2_0_serial_front_mini.jpg"></a></td>
-<td><a href="http://www.gnome.org/projects/chronojump/chronopic_2_0_serial_back.jpg"><img src="chronopic_2_0_serial_back_mini.jpg"></a></td>
-</tr>
-</table>
-
-<p><br>
-<table bgcolor="#999999" width="100%"><tr><td>
-<b>Vell Chronopic 1.0</b>
-
-<table width="100%" border="0" cellspacing="2" cellpadding="2">
-<tr bgcolor="#e6e6fa"><th>Comprar Chronopic</th><th>Escriure a</th><th>Preu aproximat</th><th>Comentaris</th></tr>
-<tr><td>a Espanya</td><td colspan="2">(esgotat, esperar al Chronopic 2.0)</td><td>Gravat en PCB</td></tr>
-<tr><td>a Sudam&egrave;rica</td><td>juanfer@juanfer.com.ar</td><td>150$ argentins +enviament</td><td>Placa casolana</td></tr>
-<tr><td colspan="4">Nota1: no ens fem responsables de que els Chronopics comprats funcionin.</td></tr>
-<tr><td colspan="4">Nota2: si desitja comercialitzar chronopics escrigui un correu a xaviblas@gmail.com.</td></tr>
-</table>
-
-
-<p><b>Construcci&oacute;</b> [Experts] Per a informaci&oacute; al voltant de la <b>fabricaci&oacute;</b> del cron&ograve;metre llegir aquest correu: <a href="http://mail.gnome.org/archives/chronojump-list/2005-October/msg00001.html">Documentaci&oacute;n sobre Chronopic 1.0 y el Prototipo 1</a> (castell&agrave;). <a href="http://www.gnome.org/projects/chronojump/articles/chronopic_cables_es.doc">Construcci&oacute; de cables per a Chronopic</a> (castell&agrave;). <a href="http://www.gnome.org/projects/chronojump/articles/record_chronopic_pic_icprog_es.doc">Enregistrament de Chronopic amb ICPROG</a> (castell&agrave;).
-<br>
-Alternativament, pot construir la <a href="construction_chronopic_juanfer_es.html">Chronopic_juanfer</a> (castell&agrave;) (m&eacute;s barata i m&eacute;s f&agrave;cil de fabricar).
-
-</td></tr></table>
-
+Aqu&iacute; teniu informaci&oacute; de les antigues versions de Chronopic: <a href="old_chronopics_ca.html">Chronopic 2.0 i Chronopic 1.0</a>.
 
 <h5>2.- Construcci&oacute; de la plataforma de contactes</h5>
 
