--- a/web/html_created_no_edit/print/faq.html
+++ b/web/html_created_no_edit/print/faq.html
@@ -50,6 +50,27 @@ Write an e-mail to the list <a href="contact.html">chronojump-list</a> and we wi
 <h5 id="chronopic">Cronometer Chronopic</h5>
 
 <ol>
+
+<p><li>Where can I buy Chronopic?</p>
+<p>
+Read the webpage: <a href="construction.html">Construction</a>.
+<p>
+
+<p><li>Can I build a homemade or industrial Chronopic?<p>
+<p>Yes, at the webpage: <a href="construction.html">Construction</a> you will find how to build it manually or industrially in every country.
+<p>
+
+<p><li>Can I sell Chronopic?</p>
+<p>
+Yes, at the price you want. You need to follow the hardware license: <a href="http://creativecommons.org/licenses/by-sa/2.5/es/deed.en_GB">Creative Commons. Attribution-Share Alike 2.5 Spain</a>.
+
+<p><li>Can I put an advertisement on your site as a Chronojump and/or Chronopic distributor?</p>
+<p>
+Yes, please write an email to the address in this image:
+
+<img align="top" src="http://www.gnome.org/projects/chronojump/images/xaviblas-correo.png" width="215" height="32">
+
+
 <li>Why the need of a chronometer if any computer can cover this function?
 <p>
 The modern operative systems are multifunction, this mean that the computer need a certain quantity of time to develop each function in a way that seems to be executing all functions at the same time.
@@ -57,23 +78,6 @@ If the computer is in charge to receive the stimulus arrived from the contact pl
 The output chronometer that we have built is special on receiving those events given on the contact platform, avoiding the reliability errors when registering the events. <br>
 Moreover Chronopic permits the use of Chronojump or its reduced version: Chronojump-mini to be used in any electronic display, assuring a good compatibility toward the future. <br>
 For more information, please read this article: <a href="http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf">"Proyecto Chronojump: Sistema de Medida de la Capacidad de Salto usando Software y Hardware Libres"</a> (spanish).
-
-<p><li>I have read that the current chronometer is a prototype, when will the final version be released? 
-<p>
-For the construction of chronopic it has been used a training card of robots Skypic, taking the chance of a free software, its construction has been documented and it is possible to acquire directly besides it has been also validated. 
-<br>So far we have an expansion card that permits the Skypic connection with to contact platform and a software (firmware) permitting Skypic to be completely functional on the detection of stated and events on the contact platform. <br>
-Soon a Chronopic card will be released using less instruction than Skypic and also reduced dimensions and it will be build easily or acquired by a reduced price (15-30 euros in Spain).<br>
-For more information, please read the webpage: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentaci&oacute;n de Chronopic 1.0 y el prototipo 1</a> (spanish).
-<br><b>Update (Sept 2007)</b>: Chronopic documentation is online 
-Read the webpage: <a href="construction.html">Construction</a>.
-
-<p><li>How can I build the chronometer?<p>
-Read the webpage: <a href="construction.html">Construction</a>.
-<p>
-
-<p><li>Where can I buy the chronometer?
-Read the webpage: <a href="construction.html">Construction</a>.
-<p>
 
 </ol>
 <p align="right"><a href="#top">Up</a></p>
