--- a/web/html_created_no_edit/print/faq_ca.html
+++ b/web/html_created_no_edit/print/faq_ca.html
@@ -52,29 +52,30 @@ Escriu un correu a la llista <a href="contact_ca.html">chronojump-list</a> i bus
 <h5 id="chronopic">El cron&ograve;metre Chronopic</h5>
 
 <ol>
+<p><li>On puc comprar el Chronopic?
+<p>
+Consulteu la <a href="construction_ca.html">p&agrave;gina de Construcci&oacute;</a>.
+
+<p><li>Puc construir o fabricar de forma industrial el Chronopic?</p>
+<p>
+S&iacute;, amb la informaci&oacute; que hi ha la <a href="construction_ca.html">p&agrave;gina de Construcci&oacute;</a> pots fabricar-lo de forma manual o industrial a qualsevol pa&iacute;s. 
+
+<p><li>Puc vendre el Chronopic?</p>
+<p>
+S&iacute;, al preu que consideris oport&uacute;. En tot moment cal que consideris la llic&egrave;ncia del maquinari: <a href="http://creativecommons.org/licenses/by-sa/2.5/es/deed.ca">Creative Commons. Reconeixement-Compartir amb la mateixa llic&egrave;ncia 2.5</a>.
+
+<p><li>Puc anunciar-me a la vostra web com a distribuidor de Chronojump i/o Chronopic?</p>
+<p>
+S&iacute;, escrigui a l'adre&ccedil;a que es veu en aquesta imatge:
+
+<img align="top" src="http://www.gnome.org/projects/chronojump/images/xaviblas-correo.png" width="215" height="32">
+
 <li>Per qu&egrave; &eacute;s necessari un cron&ograve;metre si qualsevol ordinador pot fer aquesta funci&oacute; ? 
 <p>
 Els sistemes operatius moderns s&oacute;n multifuncions, aix&ograve; significa que l'ordinador assigna petites quantitats de temps per la realizaci&oacute; de cada una de las tasques, de manera que, sembla executar-les totes al mateix temps. L'ordinador s'encarrega de captar els est&iacute;muls procedents de la plataforma de contactes, per les seves caracter&iacute;stiques, de vegades, trigar&agrave; en adonar-se d'aquests events perqu&egrave; estar&agrave; ocupat amb altres funcions.<i>assumptes</i> aix&ograve; es tradueix en problemes de fiabilitat causats pel fet que dos salts de la mateixa durada podrien registrar-se amb medicions diferents per circumst&agrave;ncies aleatories.<br>
 El cron&ograve;metre extern que hem constru&iuml;t est&agrave; especialitzat en la captaci&oacute; d'esdeveniments a la plataforma de contactes, per aix&ograve; no hi haur&agrave; errors de fiabilitat en els registres que far&agrave;.<br>
 El Chronopic permetr&agrave;, a m&eacute;s, la possibilitat de fer servir el Chronojump o la seva versi&oacute; redu&iuml;da el Chronojump-mini en quasi qualsevol dispositiu electr&ograve;nic, i n'assegura una bona compatibilitat en el futur.<br>
 Per m&eacute;s informaci&oacute; llegiu aquest article: <a href="http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf">"Projecte Chronojump: Sistema de Mesura de la Capacitat del Salt fent servir programari i equipament lliures"</a>.
-
-<p><li>He llegit que el cron&ograve;metre actual &eacute;s un prototip, quan estar&agrave; la darrera versi&oacute; disponible?
-<p>
-Per a la construcci&oacute; de Chronopic s'ha fet servir la targeta entrenadora de robots Skypic, ja que aquesta &eacute;s hardware lliure, la seva construcci&oacute; est&agrave; documentada, alhora que n'&eacute;s possible la compra directa i est&agrave; validada convenientment.
-<br>A data d'avui, disposem d'una targeta d'expansi&oacute; que permet connectar l' Skypic amb la plataforma de contactes i un programari (firmware) que permet que Skypic sigui completament funcional per a la detecci&oacute; d'estats i esdeveniments a la plataforma de contactes. <br>
-M&eacute;s endavant es crear&agrave; la targeta Chronopic, amb menys instrumentacions que Skypic, de redu&iuml;des dimensions i que podr&agrave; &eacute;sser fabricada f&agrave;cilment o adquirida a un preu baix (15-30 euros a l'Estat espanyol).<br>
-Per a m&eacute;s informaci&oacute; llegiu aquesta p&agrave;gina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentaci&oacute; de Chronopic 1.0 i el prototip 1</a>.
-<br><b>Actualitzaci&oacute; (Set 2007)</b>: La documentaci&oacute; de la Chronopic 2.0 ja est&agrave; a la xarxa 
-Consulteu la <a href="construction_ca.html">p&agrave;gina de Construcci&oacute;</a>.
-
-<p><li>Com puc construir el cron&ograve;metre?<p>
-<p>
-Consulteu la <a href="construction_ca.html">p&agrave;gina de Construcci&oacute;</a>.
-
-<p><li>On puc comprar el cron&ograve;metre?
-<p>
-Consulteu la <a href="construction_ca.html">p&agrave;gina de Construcci&oacute;</a>.
 
 </ol>
 <p align="right"><a href="#top">Pugeu</a></p>
