--- a/web/html_created_no_edit/print/faq_es.html
+++ b/web/html_created_no_edit/print/faq_es.html
@@ -52,29 +52,33 @@ Escribe un correo a la lista <a href="contact_es.html">chronojump-list</a> y ver
 <h5 id="chronopic">Cron&oacute;metro Chronopic</h5>
 
 <ol>
+
+<p><li>¿D&oacute;nde puedo comprar el Chronopic?
+<p>
+Consulte la <a href="construction_es.html">p&aacute;gina de Construcci&oacute;n</a>.
+
+<p><li>¿Puedo construir o fabricar de forma industrial el Chronopic?<p>
+<p>
+S&iacute;, con la informaci&oacute;n que se encuentra en la <a href="construction_es.html">p&aacute;gina de Construcci&oacute;n</a> puede fabricarlo de forma manual o industrial en cualquier pa&iacute;s.
+
+<p><li>¿Puedo vender el Chronopic?</p>
+<p>
+S&iacute;, al precio que consideres oportuno. Cabe considerar la licencia del hardware: <a href="http://creativecommons.org/licenses/by-sa/2.5/es/deed.es">Creative Commons. Reconocimiento-Compartir bajo la misma licencia 2.5 Espa&ntilde;a</a>.
+
+<p><li>¿Es posible anunciarse en vuestra web como distribuidor de Chronojump y/o Chronopic?</p>
+<p>
+S&iacute;, escriba a la direcci&oacute;n que se ve en esta imagen:
+
+<img align="top" src="http://www.gnome.org/projects/chronojump/images/xaviblas-correo.png" width="215" height="32">
+
+
+
 <li>¿Por qu&eacute; es necesario un cron&oacute;metro si cualquier ordenador puede hacer esa funci&oacute;n?
 <p>
 Los sistemas operativos modernos son multitarea, lo que significa que el ordenador asigna peque&ntilde;as cantidades de tiempo para la realizaci&oacute;n de cada una de las tareas de manera que parece que ejecuta todas a la vez. Si el ordenador se encarga de captar los est&iacute;mulos que proceden de la plataforma de contactos, en ocasiones ser&aacute; tard&iacute;o en advertir estos eventos porque estar&aacute; ocupado en otros <i>asuntos</i>, lo que se traduce en problemas de fiabilidad debido a que dos saltos de la misma duraci&oacute;n podr&iacute;an obtener mediciones distintas por circunstancias aleatorias.<br>
 El cron&oacute;metro externo que hemos construido est&aacute; especializado en la captaci&oacute;n de eventos en la plataforma de contactos por lo que no aparecer&aacute;n errores de fiabilidad en sus registros.<br>
 Chronopic permitir&aacute; adem&aacute;s que se pueda usar Chronojump o su versi&oacute;n reducida Chronojump-mini en casi cualquier dispositivo electr&oacute;nico, y asegura una buena compatibilidad hacia el futuro.<br>
 Para m&aacute;s informaci&oacute;n lea este art&iacute;culo: <a href="http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf">"Proyecto Chronojump: Sistema de Medida de la Capacidad de Salto usando Software y Hardware Libres"</a>.
-
-<p><li>He le&iacute;do que el cron&oacute;metro actual es un prototipo, ¿cuando estar&aacute; la versi&oacute;n final disponible?
-<p>
-Para la construcci&oacute;n de chronopic se ha usado la tarjeta entrenadora de robots Skypic debido a que es hardware libre, est&aacute; documentada su construcci&oacute;n, es posible su compra directa y est&aacute; convenientemente validada. 
-<br>Hasta la fecha se dispone de una tarjeta de expansi&oacute;n que permite conectar Skypic con la plataforma de contactos y un software (firmware) que permite que Skypic sea completamente funcional para la detecci&oacute;n de estados y eventos en la plataforma de contactos. <br>
-M&aacute;s delante se crear&aacute; la tarjeta Chronopic, con menos instrumentaciones que Skypic, de reducidas dimensiones y que podr&aacute; ser fabricada facilmente o adquirida por bajo precio (15-30 euros en Espa&ntilde;a).<br>
-Para m&aacute;s informaci&oacute;n lea esta p&aacute;gina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documentaci&oacute;n de Chronopic 1.0 y el prototipo 1</a>.
-<br><b>Actualizaci&oacute;n (Sept 2007)</b>: La documentaci&oacute;n de la Chronopic 2.0 ya est&aacute; en la red 
-Consulte la <a href="construction_es.html">p&aacute;gina de Construcci&oacute;n</a>.
-
-<p><li>¿C&oacute;mo puedo construir el cron&oacute;metro?<p>
-<p>
-Consulte la <a href="construction_es.html">p&aacute;gina de Construcci&oacute;n</a>.
-
-<p><li>¿D&oacute;nde puedo comprar el cron&oacute;metro?
-<p>
-Consulte la <a href="construction_es.html">p&aacute;gina de Construcci&oacute;n</a>.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
