--- a/web/html_created_no_edit/print/faq_gl.html
+++ b/web/html_created_no_edit/print/faq_gl.html
@@ -52,30 +52,31 @@ Escribe un correo &aacute; lista <a href="contact_gl.html">chronojump-list</a> e
 <h5 id="chronopic">Cron&oacute;metro Chronopic</h5>
 
 <ol>
+
+<p><li>Onde podo mercar o Chronopic?<p>
+<p>
+Lea la <a href="construction_gl.html">p&aacute;xina de Construci&oacute;n</a>.
+
+<p><li>Podo constru&iacute;r o fabricar de forma industrial o Chronopic?<p>
+<p>
+Si, coa informaci&oacute;n que se atopa na <a href="construction_gl.html">p&aacute;xina de Construci&oacute;n</a> pode fabricalo de forma manual ou industrial en calquera pa&iacute;s.
+
+<p><li># ¿Podo vender o Chronopic?</p>
+<p>
+Si, ao prezo que consideres oportuno. Cabo considerar a licenza do hardware: <a href="http://creativecommons.org/licenses/by-sa/2.5/es/deed.gl">Reco&ntilde;ecemento-Compartir baixo a mesma licenza. 2.5 Espa&ntilde;a</a>. 
+
+<p><li>¿&Eacute; posible anunciarse en voso web como distribuidor de Chronojump e/ou Chronopic?<p>
+<p>
+Escribe un correo &aacute;:
+
+<img align="top" src="http://www.gnome.org/projects/chronojump/images/xaviblas-correo.png" width="215" height="32">
+
+
 <li>Por que &eacute; necesario un cron&oacute;metro se calquera ordenador pode facer esa funci&oacute;n?
 <p>Os sistemas operativos modernos son multitarefa, o que significa que o ordenador asigna pequenas cantidades de tempo para a realizaci&oacute;n de cada unha das tarefas de maneira que parece que executa todas a un tempo. Se o ordenador se encarga de captar os est&iacute;mulos que proceden da plataforma de contactos, en ocasi&oacute;ns ser&aacute; tard&iacute;o en advertir estes eventos porque estar&aacute; ocupado noutros <i>asuntos</i>, o que se v&eacute;n traducir en problemas de fiabilidade debido a que dous saltos da mesma duraci&oacute;n poder&iacute;an obter medici&oacute;ns distintas por circunstancias aleatorias.<br>
 O cron&oacute;metro externo que constru&iacute;mos est&aacute; especializado na captaci&oacute;n de eventos na plataforma de contactos polo que non aparecer&aacute;n erros de fiabilidade nos seus rexistros.<br>
 Chronopic permitir&aacute; ademais que se poida usar ChronoJump ou a s&uacute;a versi&oacute;n reducida ChronoJump-mini en case calquera dispositivo electr&oacute;nico, e asegura unha boa compatibilidade cara ao futuro.<br>
 Para m&aacute;is informaci&oacute;n consulte este artigo: <a href="http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf">"Proxecto ChronoJump: Sistema de Medida da Capacidade do Salto usando Software e Hardware Libres" (en castel&aacute;n)</a>.
-
-
-<p><li>Lin que o cron&oacute;metro actual &eacute; un prototipo, cando estar&aacute; dispo&ntilde;ible a versi&oacute;n final?
-<p>
-Para a construci&oacute;n de Chronopic empregouse a tarxeta adestradora de robots Skypic debido a que &eacute; hardware libre, a s&uacute;a construci&oacute;n est&aacute; documentada, &eacute; posible a s&uacute;a compra directa e est&aacute; convenientemente validada. 
-<br>Polo de agora disponse dunha tarxeta de expansi&oacute;n que permite conectar Skypic coa plataforma de contactos e un software (firmware) que permite que Skypic sexa completamente funcional para a detecci&oacute;n de estados e eventos na plataforma de contactos. <br>
-M&aacute;is adiante crearase a tarxeta Chronopic, con menos instrumentaci&oacute;ns que Skypic, de reducidas dimensi&oacute;ns e que poder&aacute; ser fabricada facilmente ou adquirida por un prezo baixo (15-30 euros en Espa&ntilde;a).<br>
-Para m&aacute;is informaci&oacute;n lea esta p&aacute;xina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">Documentaci&oacute;n de Chronopic 1.0 e o Prototipo 1 (en castel&aacute;n)</a>.
-
-<br><b>Actualizaci&oacute;n (Set 2007)</b>: La documentaci&oacute;n de la Chronopic 2.0 ya est&aacute; en la red 
-Lea la <a href="construction_gl.html">p&aacute;xina de Construci&oacute;n</a>.
-
-<p><li>Como podo constru&iacute;r o cron&oacute;metro?<p>
-<p>
-Lea la <a href="construction_gl.html">p&aacute;xina de Construci&oacute;n</a>.
-
-<p><li>Onde podo mercar o cron&oacute;metro?
-
-Lea la <a href="construction_gl.html">p&aacute;xina de Construci&oacute;n</a>.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
