--- a/web/html_created_no_edit/print/faq_pt.html
+++ b/web/html_created_no_edit/print/faq_pt.html
@@ -52,31 +52,32 @@ Escreva um e-mail &agrave; lista <a href="contact_es.html">chronojump-list</a> e
 <h5 id="chronopic">Cron&oacute;metro Chronopic</h5>
 
 <ol>
-<li>Porque &eacute; necess&aacute;rio um cron&ocirc;metro se qualquer computador pode realizar essa fun&ccedil;&atilde;o?
+
+<p><li>Onde posso comprar o Chronopic?
+<p>
+Leia la <a href="construction_pt.html">p&aacute;xina de Constru&ccedil;&atilde;o</a>.
+
+<p><li>Como posso construir o fabricar industrialmente o chronopic?<p>
+<p>
+Sim, a p&aacute;gina web: <a href="construction_pt.html">p&aacute;xina de Constru&ccedil;&atilde;o</a> voc&ecirc; encontrar&aacute; a construir-lo manualmente ou industrial em cada pa&iacute;s.
+
+<p><li>¿Posso vender o Chronopic?</p>
+<p>
+Sim, ao pre&ccedil;o que quiser. Voc&ecirc; precisa seguir o hardware licen&ccedil;a: <a href="http://creativecommons.org/licenses/by-sa/2.5/es/deed.pt">Creative Commons. Atribui&ccedil;&atilde;o-Compartilhamento pela mesma Licen&ccedil;a 2.5 Espanha</a>.
+
+<p><li>¿Posso colocar um an&uacute;ncio em seu site como um Chronojump e/ou Chronopic distribuidor?</p>
+<p>
+Sim, por favor escreva um e-mail para o endere&ccedil;o indicado nesta imagem:
+
+<img align="top" src="http://www.gnome.org/projects/chronojump/images/xaviblas-correo.png" width="215" height="32">
+
+<li>Porque &eacute; necess&aacute;rio um cron&ocirc;metro se qualquer computador pode realizar essa fun&ccedil;&atilde;o?<p>
 <p>
 Os sistemas operacionais  modernos s&atilde;o multitarefa, o que significa que o computador determina pequenas quantidades de tempo para a realiza&ccedil;&atilde;o de cada uma das tarefas de maneira que parece que executa todas ao mesmo tempo. Se o computador se encarrega de captar os est&iacute;mulos que provem da plataforma de contatos, em ocasi&otilde;es ser&aacute; tarde em avisar destes eventos porque estar&aacute; ocupado em outros <i>assuntos</i>, o que se traduz em problemas de confiabilidade devido a que os saltos da mesma dura&ccedil;&atilde;o podreriam obter medi&ccedil;&otilde;es distintas por circunstâncias aleat&oacute;rias.<br>
 O cron&ocirc;metro externo que construimos est&aacute; especializado na capta&ccedil;&atilde;o de eventos na plataforma de contatos pelo que n&atilde;o aparecer&atilde;o erros de confiabilidade nos seus registros.<br>
 Chronopic permitir&aacute; adem&aacute;is que se possa usar Chronojump ou sua vers&atilde;o reduzida Chronojump-mini em quase qualquer dispositivo electr&ocirc;nico, e garante uma boa compatibilidade visando o futuro.<br>
 Para mais informa&ccedil;&atilde;o leia este artigo: <a href="http://www.gnome.org/projects/chronojump/articles/chronojump_sistema_de_medida_congreso_gpul.pdf">"Projeto Chronojump: Sistema de Medida da Capacidade de Salto usando Software e Hardware Livres"</a>.
  
-<p><li>L&iacute; que o cron&ocirc;metro atual &eacute; um prototipo: Quando estar&aacute; pronto a vers&atilde;o final dispon&iacute;vel?
-<p>
-Para a constru&ccedil;&atilde;o de chronopic se usou a placa treinadora de robots Skypic debido a que &eacute; hardware livre, est&aacute; documentada sua constru&ccedil;&atilde;o, &eacute; poss&iacute;vel sua compra direta e est&aacute; convenientemente validada. 
-<br>At&eacute; esta data se disp&otilde;e de uma placa de expans&atilde;o que permite conectar Skypic com a plataforma de contatos e um software (firmware) que permite que Skypic seja completamente funcional para a dete&ccedil;&atilde;o de estados e eventos na plataforma de contatos. <br>
-Muito em breve se criar&aacute; a placa Chronopic, com menos instrumenta&ccedil;&otilde;es que Skypic, de reduzidas dimens&otilde;es e que poder&aacute; ser fabricada facilmente ou adquirida por baixo pre&ccedil;o (15-30 euros em Espanha).<br>
-Para informa&ccedil;&atilde;o mais detalhada leia esta p&aacute;gina web: <a href="http://www.iearobotics.com/personal/juan/proyectos/chronopic/1.0/">documenta&ccedil;&atilde;o de Chronopic 1.0 e o prot&oacute;tipo 1</a>.
-
-<br><b>Actualizaci&oacute;n (Set 2007)</b>: La documentaci&oacute;n de la Chronopic 2.0 ya est&aacute; en la red 
-Leia la <a href="construction_pt.html">p&aacute;xina de Constru&ccedil;&atilde;o</a>.
- 
-<p><li>Como posso construir o cron&ocirc;metro?<p>
-<p>
-Leia la <a href="construction_pt.html">p&aacute;xina de Constru&ccedil;&atilde;o</a>.
- 
-<p><li>Onde posso comprar o cron&ocirc;metro?
-<p>
-Leia la <a href="construction_pt.html">p&aacute;xina de Constru&ccedil;&atilde;o</a>.
-
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
 
@@ -93,7 +94,7 @@ Na web sempre haver&aacute; uma vers&atilde;o de Chronojump gratuita, mais voc&e
  
 <p><li>E quais sistemas operacionais e equipamentos inform&aacute;ticos funciona?
 <p>
-Chronojump est&aacute; escrito para a plataforma de programa&ccedil;&atilde;o <a href="http://www.mono-project.com">MONO</a>, que foi concebida para facilitar que os programas inform&aacute;ticos funcionem em muitos sistemas operacionais e equipamentos inform&aacute;ticos. At&eacute; o momento funciona em sistemas GNU/Linux &eacute; Windows.<br>
+Chronojump est&aacute; escrito para a plataforma de programa&ccedil;&atilde;o <a href="http://www.mono-project.com">MONO</a>, que foi concebida para facilitar que os programas inform&aacute;ticos funcionem em muitos sistemas operacionais e equipamentos inform&aacute;ticos. At&eacute; o momento funciona em sistemas GNU/Linux &eacute; Windows.
  
 <p><li>Como posso descarregar (download) o programa?
 <p>
