--- a/web/html_created_no_edit/print/screenshots.html
+++ b/web/html_created_no_edit/print/screenshots.html
@@ -17,9 +17,22 @@
 Screenshots
 </h4>
 			
-<tt>Click in the images to extend.</tt>
+<tt>Sorted from newer to older. Click on the images to extend.</tt>
 
 <table border="0" cellpadding="4" cellspacing="8">
+
+<tr valign="top">
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_small.jpg" width="250" height="188"></a>
+		<br>
+		Chronopic 3.0. Industrial Design.
+	</td>
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB_small.jpg" width="250" height="238"></a>
+		<br>
+		Chronopic 3.0 (PCB). Industrial Design. 
+	</td>
+</tr>
 
 <tr valign="top">
 	<td width="250">
