--- a/web/html_created_no_edit/print/screenshots_ca.html
+++ b/web/html_created_no_edit/print/screenshots_ca.html
@@ -17,9 +17,22 @@
 Captures de pantalla
 </h4>
 
-<tt>Cliqueu sobre les imatges per ampliar-les.</tt>
+<tt>Imatges ordenades de recents a antigues. Cliqueu per a ampliar-les.</tt>
 
 <table border="0" cellpadding="4" cellspacing="8">
+
+<tr valign="top">
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_small.jpg" width="250" height="188"></a>
+		<br>
+		Chronopic 3.0. Disseny Industrial.
+	</td>
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB_small.jpg" width="250" height="238"></a>
+		<br>
+		Chronopic 3.0 (PCB). Disseny industrial. 
+	</td>
+</tr>
 
 <tr valign="top">
 	<td width="250">
