--- a/web/html_created_no_edit/print/screenshots_gl.html
+++ b/web/html_created_no_edit/print/screenshots_gl.html
@@ -17,9 +17,22 @@
 Capturas de pantalla
 </h4>
 			
-<tt>Prema nas imaxes para amplialas.</tt>
+<tt>Ordenadas de novas a antigas. Prema nas imaxes para amplialas.</tt>
 
 <table border="0" cellpadding="4" cellspacing="8">
+
+<tr valign="top">
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_small.jpg" width="250" height="188"></a>
+		<br>
+		Chronopic 3.0. Dese&ntilde;o Industrial.
+	</td>
+	<td width="250">
+		<a href="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB.jpg"><img src="http://www.gnome.org/projects/chronojump/images/Chronopic_v3.0_PCB_small.jpg" width="250" height="238"></a>
+		<br>
+		Chronopic 3.0 (PCB). Dise&ntilde;o industrial. 
+	</td>
+</tr>
 
 <tr valign="top">
 	<td width="250">
