screenshots now with a soft and a hard column. Added chronopic3-methacrylate
svn path=/trunk/; revision=353

--- a/web/html_created_no_edit/print/construction_ca.html
+++ b/web/html_created_no_edit/print/construction_ca.html
@@ -25,7 +25,7 @@ Construcci&oacute;
 
 <h5>1.- Compra-Construcci&oacute; del cron&ograve;metre</h5>
 
-S'ha publicat (22 gener 2008) la versi&oacute; 3.0 de la placa Chronopic.
+S'ha publicat la placa Chronopic 3.0 (22 gener 2008).
 <ul>
 <li>Per als que la voleu fabricar, disposeu de tota la informaci&oacute; en aquesta p&agrave;gina: <a href="http://www.iearobotics.com/wiki/index.php?title=Chronopic_3.0">Chronopic 3.0</a>
 <li>Aviat hi haur&agrave; unitats disponibles a la venda a un preu molt asequible.
@@ -46,8 +46,11 @@ S'ha publicat (22 gener 2008) la versi&oacute; 3.0 de la placa Chronopic.
 </tr>
 </table>
 
+
+Atenci&oacute;: L'equip de Chronojump <b>no es responsabilitza</b> d'eventuals problemes en la fabricaci&oacute; de Chronopics per part d'altres persones.
+<br>
 Per a m&eacute;s informaci&oacute; podeu consultar les <a href="faq_ca.html">preguntes freq&uuml;ents</a>.
-<br><br>
+<br>
 Aqu&iacute; teniu informaci&oacute; de les antigues versions de Chronopic: <a href="old_chronopics_ca.html">Chronopic 2.0 i Chronopic 1.0</a>.
 
 <h5>2.- Construcci&oacute; de la plataforma de contactes</h5>
