--- a/web/html_created_no_edit/photocells_es.html
+++ b/web/html_created_no_edit/photocells_es.html
@@ -35,7 +35,7 @@
 <li><a href="index_es.html">Introducci&oacute;n </a></li>
 <li><a href="features_es.html">Caracter&iacute;sticas</a></li>
 <li><a href="faq_es.html">FAQ</a></li>
-<li><a href="screenshots_es.html">Capturas Pantalla</a></li>
+<li><a href="screenshots_es.html">Fotos</a></li>
 <li><a href="contact_es.html">Contactar</a></li>
 <li><a href="documents_es.html">Documentos</a></li>
 <li><a href="installation_es.html">Instalaci&oacute;n</a></li>
@@ -183,13 +183,14 @@ Este apartado requiere de su colaboraci&oacute;n, si quiere a&ntilde;adir o modi
 <li><a href="http://www.iearobotics.com/personal/ricardo/index.html">Ricardo G&oacute;mez</a>
 </ul>
 
-				<h3>Colaboradores</h3>
+				<h3>Colaboradores&nbsp;[a-z]</h3>
 				<ul>
-<li><a href="mailto:marchesedavid@yahoo.com.ar">David Marchese</a>
 <li><a href="http://www.bortoleto.com/malu.htm">Maria Luisa Belloto</a>
 <li>Bernat Busc&agrave;
-<li>Josep Ma Padull&eacute;s
 <li>Alberto Garc&iacute;a-Fogeda
+<li><a href="mailto:marchesedavid@yahoo.com.ar">David Marchese</a>
+<li>Josep Ma Padull&eacute;s
+<li><a href="mailto:carles.romagosa@uvic.cat">Carles Romagosa</a>
 </ul>
 
 				<h3>Contribuyen</h3>
