--- a/web/html_created_no_edit/print/construction_ca.html
+++ b/web/html_created_no_edit/print/construction_ca.html
@@ -28,8 +28,9 @@ Construcci&oacute;
 S'ha publicat la placa Chronopic 3.0 (22 gener 2008).
 <ul>
 <li>Per als que la voleu fabricar, disposeu de tota la informaci&oacute; en aquesta p&agrave;gina: <a href="http://www.iearobotics.com/wiki/index.php?title=Chronopic_3.0">Chronopic 3.0</a>.
- Aqu&iacute; teniu la <a href="http://svn.gnome.org/svn/gnomeweb-wml/trunk/www.gnome.org/projects/chronojump/articles/validacion_chronopic3_sin_condensador_contra_osciloscopio.ods">validaci&oacute; en OpenOffice</a> i en <a href="http://svn.gnome.org/svn/gnomeweb-wml/trunk/www.gnome.org/projects/chronojump/articles/validacion_chronopic3_sin_condensador_contra_osciloscopio.pdf">PDF</a> (castell&agrave;)
-<li>Aviat hi haur&agrave; unitats disponibles a la venda a un preu molt asequible.
+ Aqu&iacute; teniu la <a href="http://svn.gnome.org/svn/gnomeweb-wml/trunk/www.gnome.org/projects/chronojump/articles/validacion_chronopic3_sin_condensador_contra_osciloscopio.ods">validaci&oacute; en OpenOffice</a> i en <a href="http://svn.gnome.org/svn/gnomeweb-wml/trunk/www.gnome.org/projects/chronojump/articles/validacion_chronopic3_sin_condensador_contra_osciloscopio.pdf">PDF</a> (castell&agrave;).
+Aqu&iacute; hi ha la lista de materials en <a href="http://svn.gnome.org/svn/gnomeweb-wml/trunk/www.gnome.org/projects/chronojump/articles/chronopic3_materials_en.pdf">angl&egrave;s</a> i en <a href="http://svn.gnome.org/svn/gnomeweb-wml/trunk/www.gnome.org/projects/chronojump/articles/chronopic3_materials_es.pdf">castell&agrave;</a>.
+<li>Aviat hi haur&agrave; unitats disponibles a la venda a un preu molt asequible. S'ha creat una <a href="chronopic3_lista_espera_es.html">llista d'espera</a> (castell&agrave;).
 </ul>
 
 <table border="0" cellpadding="4" cellspacing="8">
