--- a/web/html_created_no_edit/print/index_es.html
+++ b/web/html_created_no_edit/print/index_es.html
@@ -17,11 +17,11 @@
 &Uacute;ltimas noticias
 </h4>
 <ul>
+  <li>&Uacute;ltima&nbsp;versi&oacute;n&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_es.html"><b>0.71</b>&nbsp;(27-Mayo-2008)</a> 
   <li><a href="hardware_es.html">Chronopic 3.0 a la venta</a> (Abril 2008)
   <li><a href="courses_es.html">Jornada Chronojump Vic (Barcelona)</a> (Abril 2008)
   <li><a href="hardware_es.html">chronopic 3.0 validado</a> (Feb 2008)
   <li><a href="http://mail.gnome.org/archives/chronojump-list/2008-January/msg00000.html">Chronopics 3.0 previstas para principios de marzo</a> (1 gen 2008)
-  <li>&Uacute;ltima&nbsp;versi&oacute;n&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_es.html"><b>0.62</b>&nbsp;(7-Diciembre-2007)</a> 
   <li>Chronojump gana <a href="http://tropheesdulibre.org">premio de software libre</a> en la categor&iacute;a de educaci&oacute;n (29 nov 2007)
   <li><a href="http://mail.gnome.org/archives/chronojump-list/2007-November/msg00003.html">Actualidad&nbsp;de&nbsp;Chronojump</a> (8 nov 2007)
 </ul>
