--- a/web/html_created_no_edit/print/index_gl.html
+++ b/web/html_created_no_edit/print/index_gl.html
@@ -17,11 +17,11 @@
 &Uacute;ltimas noticias
 </h4>
 <ul>
+  <li>&Uacute;ltima&nbsp;versi&oacute;n&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_gl.html"><b>0.71</b>&nbsp;(27-Mayo-2008)</a> 
   <li><a href="hardware_gl.html">Chronopic 3.0 &aacute; venda</a> (Abril 2008)
   <li><a href="courses_es.html">Jornada Chronojump Vic (Barcelona)</a> (Abril 2008)
   <li><a href="hardware_gl.html">chronopic 3.0 validado</a> (Feb 2008)
   <li><a href="http://mail.gnome.org/archives/chronojump-list/2008-January/msg00000.html">Chronopics 3.0 previstas para principios de marzo</a> (1 gen 2008) (TRADUCIR)
-  <li>&Uacute;ltima&nbsp;versi&oacute;n&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_gl.html"><b>0.62</b>&nbsp;(7-Diciembre-2007)</a> 
   <li>Chronojump wons <a href="http://tropheesdulibre.org">free software awards</a> on education category. (Nov, 29, 2007)
   <li>Chronojump&nbsp;nowadays <a href="http://mail.gnome.org/archives/chronojump-list/2007-November/msg00004.html">english</a>, <a href="http://mail.gnome.org/archives/chronojump-list/2007-November/msg00003.html">spanish</a> (Nov, 8, 2007) (TRADUCIR)
 </ul>
