--- a/web/html_created_no_edit/print/installation.html
+++ b/web/html_created_no_edit/print/installation.html
@@ -18,13 +18,13 @@ Installation
 </h4>
 
 
-<b>Now</b> you can try ChronoJump&nbsp;<b>0.62</b> (<b>December-7-2007</b>) from any PC. This version is fully usable. Read changes list <a href="http://mail.gnome.org/archives/chronojump-list/2007-December/msg00008.html">here</a>.
+<b>Now</b> you can try ChronoJump&nbsp;<b>0.71</b> (<b>May-27-2008</b>) from any PC. This version is fully usable. Read changes list <a href="http://mail.gnome.org/archives/chronojump-list/2008-May/msg00013.html">here</a>.
 	<p>
 
 	<table width="100%" border="0" cellspacing="2" cellpadding="2">
-	<tr bgcolor="#e6e6fa"><th>Operating systems</th><th><center>Installation instructions</center></th></tr>
-	<tr><td><b>GNU/Linux</b></td><td>Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-December/msg00009.html">Chronojump 0.62 (new!) / Chronojump 0.62 (nuevo!)</a></td></tr>
-	<tr><td><b>Windows</b></td><td>Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-December/msg00009.html">Chronojump 0.62 (new!) / Chronojump 0.62 (nuevo!)</a></td></tr>
+	<tr bgcolor="#e6e6fa"><th>Operating systems</th><th><center>Installation<!-- instructions--></center></th></tr>
+	<tr><td><b>GNU/Linux</b></td><td><!--Read this e-mail:--> <a href="http://ftp.gnome.org/pub/GNOME/sources/chronojump/0.7/chronojump-0.7-Linux-x86-Install.tar.gz">Chronojump 0.7 Linux</a></td></tr>
+	<tr><td><b>Windows</b></td><td><!--Read this e-mail:--> <a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.7.1-Windows-Install.exe">Chronojump 0.7.1 Windows</a></td></tr>
 	<tr><td><b>Maemo N770</b></td><td>Read this e-mail: <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00002.html">chronojump_mini for Maemo!! Chronojump_mini funcionando en Maemo!!</a></td></tr>
 	</table>
 	
