--- a/web/html_created_no_edit/print/installation_ca.html
+++ b/web/html_created_no_edit/print/installation_ca.html
@@ -17,13 +17,13 @@
 Instal&middot;laci&oacute;
 </h4>
 
-	<b>Ja</b> podeu provar ChronoJump&nbsp;<b>0.62</b> (<b>7-Desembre-2007</b>) a  qualsevol PC. Aquesta versi&oacute; &eacute;s totalment usable. Consulteu el llistat de <a href="http://mail.gnome.org/archives/chronojump-list/2007-December/msg00008.html">canvis</a> respecte l'anterior versi&oacute;.
+	<b>Ja</b> podeu provar ChronoJump&nbsp;<b>0.71</b> (<b>27-Maig-2008</b>) a  qualsevol PC. Aquesta versi&oacute; &eacute;s totalment usable. Consulteu el llistat de <a href="http://mail.gnome.org/archives/chronojump-list/2008-May/msg00013.html">canvis</a> respecte l'anterior versi&oacute;.
 	<p>
 	
 	<table width="100%" border="0" cellspacing="2" cellpadding="2">
-	<tr bgcolor="#e6e6fa"><th>Sistemes operatius</th><th><center>Instruccions per a instal&middot;lar</center></th></tr>
-	<tr><td><b>GNU/Linux</b></td><td>Consultar aquest correu (en angl&egrave;s i castell&agrave;): <a href="http://mail.gnome.org/archives/chronojump-list/2007-December/msg00009.html">Chronojump 0.62 (new!) / Chronojump 0.62 (nuevo!)</a></td></tr>
-	<tr><td><b>Windows</b></td><td>Consultar aquest correu (en angl&egrave;s i castell&agrave;): <a href="http://mail.gnome.org/archives/chronojump-list/2007-December/msg00009.html">Chronojump 0.62 (new!) / Chronojump 0.62 (nuevo!)</a></td></tr>
+	<tr bgcolor="#e6e6fa"><th>Sistemes operatius</th><th><center><!--Instruccions per a -->Instal&middot;lar</center></th></tr>
+	<tr><td><b>GNU/Linux</b></td><td><!--Consultar aquest correu (en angl&egrave;s i castell&agrave;):--> <a href="http://ftp.gnome.org/pub/GNOME/sources/chronojump/0.7/chronojump-0.7-Linux-x86-Install.tar.gz">Chronojump 0.7 Linux</a></td></tr>
+	<tr><td><b>Windows</b></td><td><!--Consultar aquest correu (en angl&egrave;s i castell&agrave;):--> <a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.7.1-Windows-Install.exe">Chronojump 0.7.1 Windows</a></td></tr>
 	<tr><td><b>Maemo N770</b></td><td>Consultar aquest correu (en angl&egrave;s i castell&agrave;): <a href="http://mail.gnome.org/archives/chronojump-list/2007-April/msg00002.html">chronojump_mini for Maemo!! Chronojump_mini funcionando en Maemo!!</a></td></tr>
 	</table>
 	
