--- a/web/html_created_no_edit/faq_es.html
+++ b/web/html_created_no_edit/faq_es.html
@@ -15,7 +15,7 @@
 		<body id="page-main" class="with-sidebar">
 		<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr><td align="left">
-		<div align="left"><a href="index.html" border="0"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0"></a><br>
+		<div align="left"><a href="http://chronojump.org" border="0"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0"></a><br>
 		</div>
 		</td><td valign="bottom" align="right">
 		<div id="sidebar">
@@ -31,10 +31,9 @@
 </div></td></tr></table>
 <ul id=nav-top>
 <ul>
+<li><a href="http://chronojump.org">P&aacute;g. Principal</a></li>
 <li><a href="index_es.html">Introducci&oacute;n </a></li>
-<!--<li><a href="features_es.html">Caracter&iacute;sticas</a></li>-->
 <li id="currentPage">FAQ</li><li><a href="screenshots_es.html">Fotos</a></li>
-<li><a href="contact_es.html">Contactar</a></li>
 <li><a href="documents_es.html">Documentos</a></li>
 <li><a href="installation_es.html">Instalaci&oacute;n</a></li>
 <li><a href="hardware_es.html">Hardware</a></li>
@@ -157,7 +156,7 @@ Si desea realizar peticiones de caracter&iacute;sticas no dude en escribir un co
 
 <p><li>¿C&oacute;mo puedo saber las &uacute;ltimas novedades del proyecto?
 <p>
-Inscr&iacute;base o consulte los acrivos de las <a href="contact_es.html">listas de correo</a>. Adem&aacute;s puede consultar el archivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> o registro de cambios</a>.
+Consulte los <a href="http://chronojump.org">foros</a>. Adem&aacute;s puede consultar el archivo <a href="http://cvs.gnome.org/viewcvs/chronojump/changelog.txt?view=markup"><i>changelog</i> o registro de cambios</a>.
 
 <p><li>¿Por qu&eacute; se llama Chronojump si tambi&eacute;n sirve para medir carreras, tiempos de reacci&oacute;n y ritmos?
 <p>
@@ -165,7 +164,7 @@ La idea inicial era crear un software para la medici&oacute;n de eventos tempora
 
 <p><li>Me gustar&iacute;a colaborar ¿c&oacute;mo puedo hacerlo?
 <p>
-Escriba a la lista de correo <a href="contact_es.html">chronojump-devel-list</a> pres&eacute;ntese, expl&iacute;quenos por qu&eacute; quiere colaborar y cu&aacute;les son sus conocimientos.
+Consulte los <a href="http://chronojump.org">foros</a>.
 
 </ol>
 <p align="right"><a href="#top">Subir</a></p>
