--- a/web/html_created_no_edit/photocells_es.html
+++ b/web/html_created_no_edit/photocells_es.html
@@ -15,7 +15,7 @@
 		<body id="page-main" class="with-sidebar">
 		<table width="100%" border="0" cellspacing="0" cellpadding="0">
 		<tr><td align="left">
-		<div align="left"><a href="index.html" border="0"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0"></a><br>
+		<div align="left"><a href="http://chronojump.org" border="0"><img src="images/chronojump33.png" alt="logo" width="591" height="177" border="0"></a><br>
 		</div>
 		</td><td valign="bottom" align="right">
 		<div id="sidebar">
@@ -31,11 +31,10 @@
 </div></td></tr></table>
 <ul id=nav-top>
 <ul>
+<li><a href="http://chronojump.org">P&aacute;g. Principal</a></li>
 <li><a href="index_es.html">Introducci&oacute;n </a></li>
-<!--<li><a href="features_es.html">Caracter&iacute;sticas</a></li>-->
 <li><a href="faq_es.html">FAQ</a></li>
 <li><a href="screenshots_es.html">Fotos</a></li>
-<li><a href="contact_es.html">Contactar</a></li>
 <li><a href="documents_es.html">Documentos</a></li>
 <li><a href="installation_es.html">Instalaci&oacute;n</a></li>
 <li><a href="hardware_es.html">Hardware</a></li>
