--- a/web/html_created_no_edit/print/index_fr.html
+++ b/web/html_created_no_edit/print/index_fr.html
@@ -6,7 +6,7 @@
 
 			  <head>
 			  	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<title>ChronoJump - logiciel libre pour le timetracking de saut, course, temps de r&eacute;action e rhytme</title>
+		<title>ChronoJump - logiciel libre pour le timetracking de saut, course, temps de r&eacute;action et rythme</title>
 		<style type="text/css">
 			@import url(style.css);
 		</style>
@@ -14,20 +14,8 @@
 
 		<body id="page-main" class="with-sidebar">
 		<h4 id="top">
-News
+Introduction
 </h4>
-<ul>
-  <li>Derni&egrave;re&nbsp;version&nbsp;de&nbsp;Chronojump:&nbsp; <a href="installation_fr.html"><b>0.8</b>&nbsp;(2-D&eacute;cembre-2008)</a> 
-  <li><a href="http://mail.gnome.org/archives/chronojump-list/2008-July/msg00015.html">Connect more than one Chronopic to measure different channels</a>. (Jul 2008) (TRANSLATE)
-  <li>Vic conferences (catalan) on the net <a href="courses_ca.html">catalan</a>, <a href="courses_ca.html">spanish</a> (Jun 2008) (TRANSLATE)
-  <li><a href="hardware.html">Chronopic 3.0 on sale</a> (Abril 2008) (english) (TRANSLATE)
-  <li><a href="hardware.html">chronopic 3.0 validated</a> (english) (Feb 2008)
-  <li>Chronojump wons <a href="http://tropheesdulibre.org">free software awards</a> on education category. (Nov, 29, 2007)
-  <li>Chronojump&nbsp;nowadays <a href="http://mail.gnome.org/archives/chronojump-list/2007-November/msg00004.html">english</a>, <a href="http://mail.gnome.org/archives/chronojump-list/2007-November/msg00003.html">spanish</a> (Nov, 8, 2007) (TRANSLATE)
-</ul>
-
-
-<h4>Introduction</h4>
 
 <h5><b>ChronoJump</b> est un syst&egrave;me complet pour la mesure, la gestion et les statistiques des &eacute;v&eacute;nements de saut et d'autres actions</h5>
 	<center>
