kneeAngle cleaner code, shows strings and forwards in marker not found

--- a/web/software_es.html
+++ b/web/software_es.html
@@ -147,10 +147,7 @@
 								<b>0.9.1</b> (13-3-2010) <a href="http://foro.chronojump.org/showthread.php?tid=62">Cambios</a>
 							</td>
 							<td align="left">
-								<!--
-								<a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.8.15-win32.exe">Chronojump Windows</a>
-								-->
-								Se publica el fin de semana.
+								<a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.9.1.exe">Chronojump&nbsp;0.9.1</a>
 							</td>
 							<td align="left"> 
 								<!--
