--- a/web/software.html
+++ b/web/software.html
@@ -147,10 +147,7 @@
 								<b>0.9.1</b> (13-3-2010) <a href="http://forum.chronojump.org/showthread.php?tid=50">Changes</a>
 							</td>
 							<td align="left">
-								<!--
-								<a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.8.15-win32.exe">Chronojump Windows</a>
-								-->
-								Will be published this weekend.
+								<a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.9.1.exe">Chronojump&nbsp;0.9.1</a>
 							</td>
 							<td align="left"> 
 								<!--
