website software improvement

--- a/web/software.html
+++ b/web/software.html
@@ -132,6 +132,27 @@
 							</td>
 					</tr></table>
 				</div>
+				<div id="Install-Linux">
+					<table border="0">
+						<tr><th colspan="2"><h3>Install Chronojump on Linux</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td valign="bottom">
+								<img src="images/chronojump-tux.png" alt="Chronojump">
+								</td><td width="100%">
+								<ul id="nospace">
+									<li><b>Debian/Ubuntu</b>: Open a terminal and paste this:
+									<tt>
+										<br>sudo add-apt-repository ppa:ylatuya/ppa
+										<br>sudo apt-get update
+										<br>sudo apt-get install chronojump
+									</tt>
+									<li><b>Fedora</b>: Soon available
+									<li><b>Sources</b> [expert]: <a href="http://ftp.gnome.org/pub/GNOME/sources/chronojump/0.9/">Download</a>
+										<br><tt>./configure, make, sudo&nbsp;make&nbsp;install</tt>
+								</ul>
+						</td></tr>
+					</table>
+				</div>
 			</div>
 			<div id="note">
 				<font size="2">
@@ -144,18 +165,13 @@
 						<tr><td colspan="3" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr>
 							<td align="left">
-								<b>0.9.1</b> (13-3-2010) <a href="http://forum.chronojump.org/showthread.php?tid=50">Changes</a>
+								<b>0.9.1</b> (2010-3-13) <a href="http://forum.chronojump.org/showthread.php?tid=50">Changes</a>
 							</td>
 							<td align="left">
 								<a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.9.1.exe">Chronojump&nbsp;0.9.1</a>
 							</td>
 							<td align="left"> 
-								<!--
-								<a href="http://ppa.launchpad.net/ylatuya/ppa/ubuntu">Ubuntu</a> - 
-								<a href="http://olea.org/paquetes-rpm/repoview/chronojump.html">Fedora</a> -
-								-->
-								<a href="http://ftp.gnome.org/pub/GNOME/sources/chronojump/0.9/">sources</a>
-								(Ubuntu and Fedora soon)
+								<a href="#Install-Linux">Chronojump&nbsp;0.9.1</a>
 							</td>
 						</tr>
 					</table>
