--- a/web/software_es.html
+++ b/web/software_es.html
@@ -132,6 +132,27 @@
 							</td>
 					</tr></table>
 				</div>
+				<div id="Install-Linux">
+					<table border="0">
+						<tr><th colspan="2"><h3>Instalar Chronojump en Linux</h3></th></tr>
+						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
+						<tr valign="top"><td valign="bottom">
+								<img src="images/chronojump-tux.png" alt="Chronojump">
+								</td><td width="100%">
+								<ul id="nospace">
+									<li><b>Debian/Ubuntu</b>: Pegar este texto en una terminal:
+									<tt>
+										<br>sudo add-apt-repository ppa:ylatuya/ppa
+										<br>sudo apt-get update
+										<br>sudo apt-get install chronojump
+									</tt>
+									<li><b>Fedora</b>: Disponible en breve
+									<li><b>Sources</b> [experto]: <a href="http://ftp.gnome.org/pub/GNOME/sources/chronojump/0.9/">Download</a>
+										<br><tt>./configure, make, sudo&nbsp;make&nbsp;install</tt>
+								</ul>
+						</td></tr>
+					</table>
+				</div>
 			</div>
 			<div id="note">
 				<font size="2">
@@ -150,12 +171,7 @@
 								<a href="http://ftp.gnome.org/pub/GNOME/binaries/win32/chronojump/Chronojump-0.9.1.exe">Chronojump&nbsp;0.9.1</a>
 							</td>
 							<td align="left"> 
-								<!--
-								<a href="http://ppa.launchpad.net/ylatuya/ppa/ubuntu">Ubuntu</a> - 
-								<a href="http://olea.org/paquetes-rpm/repoview/chronojump.html">Fedora</a> -
-								-->
-								<a href="http://ftp.gnome.org/pub/GNOME/sources/chronojump/0.9/">fuentes</a>
-								(Ubuntu y Fedora en breve)
+								<a href="#Install-Linux">Chronojump&nbsp;0.9.1</a>
 							</td>
 						</tr>
 					</table>
