kneeAngle: better calculateThresholdStart

--- a/web/hardware_store_es.html
+++ b/web/hardware_store_es.html
@@ -50,7 +50,7 @@
 				<div id="slide1">
 					<ul>
 						<li><a href="#chronopic3"><img src="images/chronopic3.png" alt="Chronopic3"></a></li>
-						<li><a href="#platform-rigid"><img src="images/pending3.png" alt="Platform rigid"></a></li>
+						<li><a href="#platform-rigid"><img src="images/chronojump_circuit_board_platform_small.png" alt="Platform rigid"></a></li>
 						<li><a href="#platform-flexible"><img src="images/pending3.png" alt="Platform flexible"></a></li>
 						<li><a href="#photocells"><img src="images/velleman_connecting5.jpg" alt="Photocells"></a></li>
 					</ul>
@@ -83,18 +83,18 @@
 						<tr><th colspan="2"><h3>Plataforma de saltos circuito impreso</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
-								<img src="images/pending3.png" alt="Chronopic3">
+								<img src="images/chronojump_circuit_board_platform_small.png" alt="Chronojump circuit board platform">
 								</td><td width="100%">
-								Plataforma de alta calidad resistente a la flexión (fibra de vidrio) y con buena conductividad. A diferencia de las plataformas de varillas, la plataforma rígida produce contacto en toda su área evitando falsos contactos o caídas en zonas muertas.
-								<br><br>Tamaños:
+								Plataforma de alta calidad resistente a la flexión (fibra de vidrio) y con buena conductividad. A diferencia de las plataformas de varillas, la plataforma rígida produce contacto en toda su área evitando falsos contactos o caídas en zonas muertas. Tamaños:
 								<ul>
 									<li>Din A2
 									<li>Din A3
+									<li>Din A4
 									<li>(Puede pedir otros tamaños)
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-								Precio: por determinar.
+								El precio se publicará el 4 de abril. Esa misma fecha, el producto estará disponible. Gracias por la espera.
 							</td>
 					</tr></table>
 				</div>
@@ -103,7 +103,7 @@
 						<tr><th colspan="2"><h3>Platforma de saltos flexible</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
-								<img src="images/pending3.png" alt="Chronopic3">
+								<img src="images/pending3.png" alt="Chronojump flexible platform">
 								</td><td width="100%">
 									Plataforma flexible con elevada superfície de contacto. Muy buena relación entre precio, calidad, capacidad de transporte y almacenamiento.
 								<br><br>Tamaños:
