--- a/web/hardware_store.html
+++ b/web/hardware_store.html
@@ -50,7 +50,7 @@
 				<div id="slide1">
 					<ul>
 						<li><a href="#chronopic3"><img src="images/chronopic3.png" alt="Chronopic3"></a></li>
-						<li><a href="#platform-rigid"><img src="images/pending2.png" alt="Platform rigid"></a></li>
+						<li><a href="#platform-rigid"><img src="images/chronojump_circuit_board_platform_small.png" alt="Platform rigid"></a></li>
 						<li><a href="#platform-flexible"><img src="images/pending2.png" alt="Platform flexible"></a></li>
 						<li><a href="#photocells"><img src="images/velleman_connecting5.jpg" alt="Photocells"></a></li>
 					</ul>
@@ -82,18 +82,18 @@
 						<tr><th colspan="2"><h3>Circuit board jump platform</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
-								<img src="images/pending2.png" alt="Chronopic3">
+								<img src="images/chronojump_circuit_board_platform_small.png" alt="Chronojump circuit board platform">
 								</td><td width="100%">
-								High quality platform. Resistant to flexion (fiberglass) and with good conductivity. All circuit area produces contact. Opossite to old rods platforms, here here are no false contacts or problems produced by the toes being placed between rods at raising or falling.
-								<br><br>Sizes:
+								High quality platform. Resistant to flexion (fiberglass) and with good conductivity. All circuit area produces contact. Opossite to old rods platforms, here here are no false contacts or problems produced by the toes being placed between rods at raising or falling. Sizes:
 								<ul>
 									<li>Din A2
 									<li>Din A3
+									<li>Din A4
 									<li>(You can ask for other sizes)
 								</ul>
 								</td></tr>
 								<tr><td valign="bottom">
-								Price: still unknown.
+								Price will be published and product available at April 4th. Thanks for waiting.
 							</td>
 					</tr></table>
 				</div>
@@ -102,7 +102,7 @@
 						<tr><th colspan="2"><h3>Flexible jump platform</h3></th></tr>
 						<tr><td colspan="2" bgcolor="#6c77ab" height="1px"></td></tr>
 						<tr valign="top"><td rowspan="2">
-								<img src="images/pending2.png" alt="Chronopic3">
+								<img src="images/pending2.png" alt="Chronojump flexible platform">
 								</td><td width="100%">
 									Flexible platform with high contact area. Best balance between price, quality, transport and storage.
 								<br><br>Sizes:
